--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -11,6 +11,15 @@
 	text-transform: uppercase;
 }
 
+.font-bold {
+	font-weight: bold;
+}
+
+.text-title {
+	@include FontBold($font-slider);
+	color: $text-title;
+}
+
 .icon-social {
 	width: 23px;
 	height: 23px;
@@ -49,3 +58,21 @@
 	right: 5px;
 	outline: none;
 }
+
+.btn-contact {
+	@include borderCorner(0);
+	border: 1px solid #000;
+	color: #000;
+	@include FontRegular($font-body);
+	padding: 11px 22px;
+}
+
+.fullscreen {
+	margin-left: 15px;
+	margin-right: 15px;
+}
+.margin-top {
+	margin-top: 50px;
+}
+
+
