--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -65,6 +65,7 @@
 	color: #000;
 	@include FontRegular($font-body);
 	padding: 11px 22px;
+	display: table;
 }
 
 .fullscreen {
@@ -73,6 +74,10 @@
 }
 .margin-top {
 	margin-top: 50px;
+}
+
+.margin-bottom-25 {
+	margin-bottom: 25px !important;
 }
 
 
