--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -26,6 +26,14 @@ header {
           margin-right: 20px;
         }
 
+        .cls-account {
+
+          a:first-child {
+            margin-right: 0;
+          }
+          
+        }
+
     }
 
       button {
