--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -233,6 +233,10 @@ section.page {
 
   &.acoounts {
 
+    .bread .page-title {
+      margin-bottom: 43px;
+    }
+
     .text-title {
       margin: 0 0 25px;
     }
