--- a/sass/all.scss
+++ b/sass/all.scss
@@ -10,6 +10,8 @@
 @import "responsive";
 @import "carousel";
 @import "pagination";
+@import "sidebar";
+@import "checkbox";
 
 @import 'pages';
 @import 'page/home';
