--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -80,8 +80,19 @@
 	margin-bottom: 25px !important;
 }
 
+.margin-bottom-60 {
+	margin-bottom: 55px !important;
+}
+
 .full {
 	width: 100%;
 }
 
+/*.flex-align {
+	@include flexbox();
+	@include flex-flow(row wrap);
+	@include justify-content(center);
+	@include align-items(center);
+	height: 100%;
+}*/
 
