--- a/sass/all.scss
+++ b/sass/all.scss
@@ -12,6 +12,7 @@
 @import "pagination";
 @import "sidebar";
 @import "checkbox";
+@import "slick-details";
 
 @import 'pages';
 @import 'page/home';
