--- a/sass/page/_products.scss
+++ b/sass/page/_products.scss
@@ -110,7 +110,7 @@
             }
 
             span:last-of-type {
-              margin-left: 10px;
+              //margin-left: 10px;
               margin-right: 0;
             }
 
