--- a/sass/page/_product-details.scss
+++ b/sass/page/_product-details.scss
@@ -4,23 +4,107 @@ section.details {
 
     .carousel-wrap {
       position: relative;
-      height: 375px;
+      /*height: 375px;*/
 
       .bg-gay {
         position: absolute;
         width: 100%;
-        height: 200px;
         background: $box;
         top: 50%;
         margin-top: -100px;
+        z-index: -1;
+      }
+
+      .bx-wrapper {
+        margin: 0 auto;
+
+        .bx-viewport {
+          box-shadow: none;
+          left: inherit;
+          border: 0;
+
+          .bxslider-details > li {
+            left: 0;
+
+            .bg-gay {
+              height: 200px;
+            }
+
+          }
+
+        }
+
+        .bx-controls {
+          position: absolute;
+          right: -120px;
+          top: 200px;
+          overflow: auto;
+          height: 15px;
+          width: 74px;
+
+          .bx-prev {
+            left: 0;
+            background: url('../images/detail/left.png') no-repeat;
+            height: 15px;
+
+            &:after {
+              content: '';
+              position: absolute;
+              right: 0;
+              width: 1px;
+              height: 100%;
+              background: #8a8a8a;
+              @include Rorate(90);
+              top: -40px;
+              left: 16px;
+
+            }
+
+          }
+
+          .bx-next {
+            right: 0;
+            background: url('../images/detail/right.png') no-repeat;
+            height: 15px;
+          }
+        }
+
+      }
+
+      #bx-pager {
+        position: absolute;
+        right: -390px;
+        bottom: 0;
+        width: 100%;
+
+        a {
+          width: 100px;
+          margin-right: 12px;
+          position: relative;
+          display: inline-block;
+
+          &:last-child {
+            margin-right: 0;
+          }
+          
+          &:hover, &:focus {
+            text-decoration: none;
+          }
+
+          .bg-gay {
+            height: 34px;
+            top: inherit;
+            bottom: -13px;
+            margin-top: 0;
+          }
+          
+        }
+
       }
 
     }
 
-    .slider-for {
-      position: absolute;
-      top: 30px;
-    }
+
 
   }
 
