--- a/sass/page/_cart.scss
+++ b/sass/page/_cart.scss
@@ -39,6 +39,10 @@ section.cart {
 
       }
 
+      &:last-child {
+        margin-bottom: 35px;
+      }
+
     }
 
     p.bold {
@@ -58,7 +62,7 @@ section.cart {
       }
     }
 
-    &--product {
+    &--item {
 
       .row {
         position: relative;
@@ -78,7 +82,7 @@ section.cart {
 
         }
 
-        p, .form-control {
+        p, .form-control, .remove {
           margin-top: 10px;
         }
 
@@ -86,6 +90,11 @@ section.cart {
           max-width: 100px;
           margin: 10px auto 0;
           text-align-last: center;
+          height: 27px;
+        }
+        
+        .remove {
+          cursor: pointer;
         }
       }
 
