--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -15,6 +15,10 @@
 	font-weight: bold;
 }
 
+.font-style {
+	font-style: italic;
+}
+
 .text-title {
 	@include FontBold($font-slider);
 	color: $text-title;
@@ -80,8 +84,16 @@
 	margin-bottom: 25px !important;
 }
 
+.margin-bottom-20 {
+	margin-bottom: 20px !important;
+}
+
 .margin-bottom-60 {
 	margin-bottom: 55px !important;
+}
+
+.margin-bottom-30 {
+	margin-bottom: 30px;
 }
 
 .full {
