--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -19,6 +19,10 @@
 	font-style: italic;
 }
 
+.hidden-animation {
+	position: absolute;
+}
+
 .text-title {
 	@include FontBold($font-slider);
 	color: $text-title;
