--- a/sass/page/_products.scss
+++ b/sass/page/_products.scss
@@ -7,6 +7,7 @@
       width: 100%;
 
       li {
+        cursor: pointer;
 
         &:not(.transparent) {
           @include FontRegular($font-body);
@@ -71,9 +72,9 @@
       .tab-pane {
         margin-top: 50px;
 
-        &.list {
+        .grid {
 
-          .product-item {
+          .product-item-grid {
             min-height: 300px;
             @include animate(0.5s);
 
@@ -93,7 +94,7 @@
 
           }
 
-          .product-item-content {
+          .product-item-grid-content {
 
             /*&:before {
               width: 0;
@@ -133,84 +134,90 @@
 
         }
 
+        .list {
+
+        }
+
       }
       
     }
 
-    .product-item {
-      min-height: 400px;
-      position: relative;
-
-      .product-box{
-        min-height: 235px;
+    .grid {
+      .product-item-grid {
+        min-height: 400px;
         position: relative;
-      }
 
-      .description {
-        @include FontRegular($font-body);
-        color: $text;
-        padding-top: 15px;
-      }
-
-      img {
-        display: table;
-        margin: 0 auto;
-      }
-
-      .bg-gray {
-        position: absolute;
-        content: '';
-        width: 100%;
-        height: 70px;
-        background: $box;
-        top: -32px;
-        left: 0;
-        z-index: -1;
-      }
-
-      &-content {
-        padding: 50px 0 50px 15px;
-        position: relative;
-        margin-left: 15px;
-
-        p, span:not(.cart p) {
-          @include FontBold($font-nav);
-          color: $text-title;
+        .product-box{
+          min-height: 235px;
+          position: relative;
         }
 
-        span:first-of-type {
-          @include FontRegular($font-nav);
-          margin-right: 10px;
+        .description {
+          @include FontRegular($font-body);
+          color: $text;
+          padding-top: 15px;
         }
 
-        &:before {
-          content: '';
+        img {
+          display: table;
+          margin: 0 auto;
+        }
+
+        .bg-gray {
           position: absolute;
-          width: 1px;
-          height: 82px;
-          background: #000;
+          content: '';
+          width: 100%;
+          height: 70px;
+          background: $box;
+          top: -32px;
           left: 0;
-          top: 25px;
+          z-index: -1;
+        }
+
+        &-content {
+          padding: 50px 0 50px 15px;
+          position: relative;
+          margin-left: 15px;
+
+          p, span:not(.cart p) {
+            @include FontBold($font-nav);
+            color: $text-title;
+          }
+
+          span:first-of-type {
+            @include FontRegular($font-nav);
+            margin-right: 10px;
+          }
+
+          &:before {
+            content: '';
+            position: absolute;
+            width: 1px;
+            height: 82px;
+            background: #000;
+            left: 0;
+            top: 25px;
+          }
+
+        }
+
+        .text-sale {
+          @include FontBold(13px);
+          color: #fff;
+          padding: 4px 12px 11px 13px;
+          background: url(../images/text-sale.png) no-repeat;
+          position: absolute;
+          top: 0;
+          right: 0;
+        }
+
+
+
+        &:hover > .cart {
+          display: block;
         }
 
       }
-
-      .text-sale {
-        @include FontBold(13px);
-        color: #fff;
-        padding: 4px 12px 11px 13px;
-        background: url(../images/text-sale.png) no-repeat;
-        position: absolute;
-        top: 0;
-        right: 0;
-      }
-
-
-
-      &:hover > .cart {
-        display: block;
-      }
-
     }
 
     .form-control {
