--- a/sass/page/_products.scss
+++ b/sass/page/_products.scss
@@ -26,7 +26,7 @@
           }
         }
         
-        &.active {
+        &.mixitup-control-active {
           background: #000;
           color: #fff;
           @include FontBold($font-body);
@@ -143,7 +143,7 @@
     }
 
 
-      .product-item-grid {
+      .product-item {
         min-height: 400px;
         position: relative;
 
