--- a/sass/_pagination.scss
+++ b/sass/_pagination.scss
@@ -2,6 +2,7 @@ section.page {
 
   .pagination {
     @include borderCorner(0);
+    margin-top: 50px;
 
     & >li:first-child>a, & >li:last-child>a {
       @include borderCorner(0);
