--- a/sass/page/_products.scss
+++ b/sass/page/_products.scss
@@ -26,7 +26,7 @@
           }
         }
         
-        &.mixitup-control-active {
+        &.mixitup-control-active:not(.transparent) {
           background: #000;
           color: #fff;
           @include FontBold($font-body);
@@ -134,8 +134,25 @@
 
         }
 
-        .list {
+        .bg-gray {
+          position: absolute;
+          content: '';
+          width: 100%;
+          height: 70px;
+          background: $box;
+          top: -32px;
+          left: 0;
+          z-index: -1;
+        }
 
+        .text-sale {
+          @include FontBold(13px);
+          color: #fff;
+          padding: 4px 12px 11px 13px;
+          background: url(../images/text-sale.png) no-repeat;
+          position: absolute;
+          top: 0;
+          right: 0;
         }
 
       }
@@ -161,17 +178,6 @@
         img {
           display: table;
           margin: 0 auto;
-        }
-
-        .bg-gray {
-          position: absolute;
-          content: '';
-          width: 100%;
-          height: 70px;
-          background: $box;
-          top: -32px;
-          left: 0;
-          z-index: -1;
         }
 
         &-content {
@@ -201,20 +207,62 @@
 
         }
 
-        .text-sale {
-          @include FontBold(13px);
-          color: #fff;
-          padding: 4px 12px 11px 13px;
-          background: url(../images/text-sale.png) no-repeat;
-          position: absolute;
-          top: 0;
-          right: 0;
-        }
-
-
-
         &:hover > .cart {
           display: block;
+        }
+
+        &-list {
+          min-height: 198px;
+
+          .product-box {
+            min-height: inherit;
+
+            .bg-gray {
+              top: inherit;
+              bottom: -32px;
+              height: 50px;
+            }
+
+          }
+
+          .product-item-content {
+            margin-left: 0;
+            padding: 0;
+
+            &:before {
+              width: 0;
+            }
+
+            .item-name {
+              display: inline-block;
+              position: relative;
+              padding-right: 70px;
+              margin-bottom: 10px;
+            }
+
+            span.price-now {
+              position: relative;
+
+              &:before {
+                content: '';
+                position: absolute;
+                height: 1px;
+                background: #000;
+                left: -43px;
+                width: 110px;
+                top: 11px;
+              }
+
+            }
+
+          }
+          
+          .cart {
+            display: block;
+            top: inherit;
+            bottom: -54px;
+          }
+
         }
 
       }
