--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -9,12 +9,17 @@ section.page {
     left: 0;
     box-sizing: content-box;
     display: none;
+    min-height: 35px;
 
     &-block {
       color: #000;
       text-transform: uppercase;
+      @include flexbox ();
+      @include justify-content(center);
+      @include flex-flow(row wrap);
+      @include align-items(center);
+      height: 35px;
       border-right: 1px solid #000;
-      padding: 12px 0;
 
       &:hover {
         color: #fff;
@@ -32,27 +37,55 @@ section.page {
       }
 
       &:not(:first-child) {
-        height: 43px;
-        text-align: center;  /* align the inline(-block) elements horizontally */
-        font: 0/0 a;
-
-        &:before {
-          content: ' ';
-          display: inline-block;
-          vertical-align: middle;  /* vertical alignment of the inline element */
-          height: 100%;
-        }
-
-        img {
-          display: inline-block !important;
-          vertical-align: middle;  /* vertical alignment of the inline element */
-          font: 16px/1 Arial sans-serif;
-        }
 
       }
 
       & > p {
         font-size: 16px !important;
+      }
+
+      &:last-child {
+        border-right: 0;
+      }
+
+    }
+
+    &-like {
+
+      & > div {
+        width: 15px;
+        height: 14px;
+        overflow: hidden;
+        background: url('../images/icon-like.png') no-repeat;
+        background-position: 0 0;
+      }
+      
+      &:hover {
+        background: #000;
+
+        & > div {
+          background-position: 0 -14px;
+        }
+      }
+      
+    }
+
+    &-view {
+
+      & > div {
+        width: 17px;
+        height: 13px;
+        overflow: hidden;
+        background: url('../images/icon-view.png') no-repeat;
+        background-position: 0 0;
+      }
+
+      &:hover {
+        background: #000;
+
+        & > div {
+          background-position: 0 -13px;
+        }
       }
 
     }
