--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -7,9 +7,9 @@ section.page {
     position: absolute;
     top: 0;
     left: 0;
-    box-sizing: content-box;
+    box-sizing: border-box;
     display: none;
-    min-height: 35px;
+    height: 35px;
 
     &-block {
       color: #000;
@@ -18,7 +18,7 @@ section.page {
       @include justify-content(center);
       @include flex-flow(row wrap);
       @include align-items(center);
-      height: 35px;
+      height: 33px;
       border-right: 1px solid #000;
 
       &:hover {
